--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <span>Mortgage Type</span>
           <div class="radio-group" id="type-group">
             <label class="radio-option">
-              <input type="radio" name="mortgage-type" value="repayment" checked>
+              <input type="radio" name="mortgage-type" value="repayment">
               Repayment
             </label>
             <label class="radio-option">
